tests/baselines/reference/parserErrorRecovery_ParameterList2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList2.ts (2 errors) ====
    function f(a, {
                ~
!!! error TS1009: Trailing comma not allowed.
                  ~
!!! error TS1005: ')' expected.
    }